    * 0908 Check event state: New option "Less Verbose Output"...
    * 0965 Cumulative permissions and contact groups for WATO folders...
    * 0781 FIX: host diag page: fixed problem with update of diagnose subwindows...
    * 0904 FIX: Fixed exception in host parameter overview...
    * 0971 FIX: Fix missing authentication of PHP addons in D-WATO when activation mode is reload...

    Notifications:
    * 0754 Allow users to disable their notifications completely...
    * 0755 Added variables LASTHOSTUP_REL and LASTSERVICEOK_REL to notification context...
    * 0883 Added Date / Time to HTML notification email
    * 0900 notify_multitech.py: new treasures script for notifying via MultiTech SMS Gateway...
    * 0968 Notification scripts are now configurable via WATO...
    * 0752 FIX: FIX: compute correct state transitions for notifications...
    * 0753 FIX: FIX: correctly show original state in HTML notification mails...
    * 0609 FIX: mail notification script now uses 6 digit hex codes for colors to be better compatible with web based mail browsers
    * 0964 FIX: Fix hanging shutdown of CMC on RedHat 5.X...

    Reporting & Availability:
    * 0756 Allow availability of multisite BI aggregates at once...
    * 0966 CSV export for availability works now also for BI aggregates
    * 0967 BI Availability timewarp: new buttons for moving back and forth
    * 0962 FIX: Fix CSV-Export in availability table

    Event Console:
    * 0885 New option for writing all messages into a syslog-like logfile...
    * 0902 FIX: event console view: fixed exception on rendering host tags for unknown hosts...

    Livestatus:
    * 0747 FIX: livestatus table hostsbygroup: fixed bug with group_authorization strict...
    * 0831 FIX: table statehist: no longer crashes on TIMEPERIOD TRANSITION entries with an invalid syntax...

    Livestatus-Proxy:
    * 0970 FIX: liveproxyd: handle situations with more then 1024 open files...

    HW/SW-Inventory: