@@ -94,6 +94,7 @@
     * 0781 FIX: host diag page: fixed problem with update of diagnose subwindows...
     * 0904 FIX: Fixed exception in host parameter overview...
     * 0971 FIX: Fix missing authentication of PHP addons in D-WATO when activation mode is reload...
+    * 0972 FIX: Do not loose site specific global settings anymore when chaning a site's configuration...
 
     Notifications:
     * 0754 Allow users to disable their notifications completely...
